# app/Http/Controllers/Gamification/GamblingController.php
@@ -66,6 +66,9 @@ class GamblingController extends Controller
      *           type="string",
      *         )
      *     ),
+     *     security={{
+     *          "api_key":{}
+     *     }},
      *     @OA\Response(
      *         response=200,
      *         description="...",
