# public/data/swagger.yaml
@@ -60,6 +60,9 @@ paths:
       responses:
         '200':
           description: ...
+      security:
+        -
+          api_key: []
   /bot/gamification/levelup:
     post:
       tags:
@@ -91,6 +94,9 @@ paths:
       responses:
         '200':
           description: ...
+      security:
+        -
+          api_key: []
   /ranking/general:
     get:
       tags:
@@ -142,6 +148,9 @@ paths:
       responses:
         '200':
           description: ...
+      security:
+        -
+          api_key: []
     post:
       tags:
         - users
@@ -165,6 +174,9 @@ paths:
       responses:
         '200':
           description: ...
+      security:
+        -
+          api_key: []
   '/users/{discordId}':
     get:
       tags:
@@ -189,6 +201,9 @@ paths:
       responses:
         '200':
           description: ...
+      security:
+        -
+          api_key: []
     put:
       tags:
         - users
@@ -240,6 +255,9 @@ paths:
       responses:
         '200':
           description: ...
+      security:
+        -
+          api_key: []
     delete:
       tags:
         - users
